--- a/docs/notebooks/exercises/WakeDeflection.ipynb
+++ b/docs/notebooks/exercises/WakeDeflection.ipynb
@@ -68,9 +68,9 @@
    "outputs": [],
    "source": [
     "site = IEA37Site(16)\n",
-    "x, y = [0, 600, 1200], [0, 0, 0] \n",
+    "x, y = [0, 600, 1200], [0, 0, 0]\n",
     "windTurbines = IEA37_WindTurbines()\n",
-    "wfm = Bastankhah_PorteAgel_2014(site, windTurbines, deflectionModel=JimenezWakeDeflection())"
+    "wfm = Bastankhah_PorteAgel_2014(site, windTurbines, k=0.0324555, deflectionModel=JimenezWakeDeflection())"
    ]
   },
   {
@@ -81,15 +81,15 @@
    "source": [
     "# define function that plots the flow field and AEP history of 3 wind turbines\n",
     "def plot_flow_field_and_aep(WT0, WT1, TILT):\n",
-    "    \n",
+    "\n",
     "    ax1 = plt.figure(figsize=(20,4)).gca()\n",
     "    ax2 = plt.figure(figsize=(10,3)).gca()\n",
-    "    \n",
+    "\n",
     "    sim_res = wfm(x, y, yaw=np.reshape([WT0,WT1,0],(3,1,1)), wd=270, ws=10, tilt=TILT)\n",
     "    sim_res.flow_map(HorizontalGrid(x = np.linspace(0,1400,200), y=np.linspace(-200,200,50))).plot_wake_map(ax=ax1)\n",
     "    ax1.set_xlim([-200,1400])\n",
     "    aep.append(sim_res.aep().values[:,0,0])\n",
-    "    aep_arr = np.array(aep)                                     \n",
+    "    aep_arr = np.array(aep)\n",
     "    for i in range(3):\n",
     "        ax2.plot(aep_arr[:,i], '.-', label='WT%d, %.2f'%(i,aep_arr[-1,i]))\n",
     "    ax2.plot(aep_arr.sum(1), '.-', label='Total, %.2f'%aep_arr[-1].sum())\n",
@@ -149,7 +149,7 @@
    "source": [
     "# Run the plot_flow_field_and_aep function when moving the sliders\n",
     "aep = []\n",
-    "_ = interact(plot_flow_field_and_aep, \n",
+    "_ = interact(plot_flow_field_and_aep,\n",
     "             WT0=IntSlider(min=-50, max=50, step=1, value=0, continuous_update=False),\n",
     "             WT1=IntSlider(min=-50, max=50, step=1, value=0, continuous_update=False),\n",
     "             TILT=IntSlider(min=-15, max=15, step=1, value=0, continuous_update=False)\n",
