--- a/docs/notebooks/Optimization.ipynb
+++ b/docs/notebooks/Optimization.ipynb
@@ -119,7 +119,7 @@
     "    return IEA37SimpleBastankhahGaussian(site, wt)\n",
     "\n",
     "#wind farm model for the Hornsrev1 site\n",
-    "Hornsrev1_wfm = Bastankhah_PorteAgel_2014(Hornsrev1Site(), V80())\n",
+    "Hornsrev1_wfm = Bastankhah_PorteAgel_2014(Hornsrev1Site(), V80(), k=0.0324555)\n",
     "\n",
     "#function to create a topfarm problem, following the elements of OpenMDAO architecture\n",
     "def get_topfarmProblem_xy(wfm, grad_method, maxiter, n_cpu):\n",
@@ -575,7 +575,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.7"
   },
   "toc": {
    "base_numbering": 1,
