--- a/docs/notebooks/BlockageDeficitModels.ipynb
+++ b/docs/notebooks/BlockageDeficitModels.ipynb
@@ -218,7 +218,7 @@
    "source": [
     "### VortexCylinder\n",
     "\n",
-    "Induced velocity from a semi-infinite cylinder of tangential vorticity, extending along the z axis.\n",
+    "Induced velocity from a semi-infinite cylinder of tangential vorticity, extending along the x axis.\n",
     "\n",
     "This model is an adapted version of the one published by Emmanuel Branlard at https://github.com/ebranlard/wiz/blob/master/wiz/VortexCylinder.py\n",
     "\n",
