JITStreamlineDistance calculated absolute streamlines relative to mean sea...

--- a/docs/notebooks/Site.ipynb
+++ b/docs/notebooks/Site.ipynb
@@ -567,7 +567,7 @@
                 "for name, site in sites.items():\n",
                 "    print (\"------- %s -------\"%name)\n",
                 "    wt_x, wt_y = site.initial_position[0]\n",
-                "    site.distance.setup(src_x_ilk=[wt_x, wt_x], src_y_ilk=[wt_y, wt_y-1000], src_h_ilk=[70,90]) # wt2 1000m to the south\n",
+                "    site.distance.setup(src_x_ilk=[wt_x, wt_x], src_y_ilk=[wt_y, wt_y-1000], src_h_ilk=[70,90], src_z_ilk=[0,0]) # wt2 1000m to the south\n",
                 "    dw_ijlk, cw_ijlk, dh_ijlk = site.distance(wd_l=wd, src_idx=[0], dst_idx=[[1,1,1]])\n",
                 "    \n",
                 "\n",
