--- a/docs/notebooks/EngineeringWindFarmModels.ipynb
+++ b/docs/notebooks/EngineeringWindFarmModels.ipynb
@@ -13,7 +13,7 @@
    "id": "ae118221",
    "metadata": {},
    "source": [
-    "PyWake contains three general engineering wind farm models, namely [PropagateDownwind](#PropagateDownwind), [All2AllIerative](#All2AllIterative) and [PropagateUpDownIteative](#PropagateUpDownIterative). \n",
+    "PyWake contains three general engineering wind farm models, namely [PropagateDownwind](#PropagateDownwind), [All2AllIerative](#All2AllIterative) and [PropagateUpDownIterative](#PropagateUpDownIterative). \n",
     "\n",
     "The table below compares their properties:\n",
     "\n",
@@ -151,7 +151,7 @@
     "\n",
     "- **Iteration 1:** All three WT see the free wind (10m/s) and their CT values and resulting deficits are therefore equal.\n",
     "- **Iteration 2:** The local effective wind speeds are updated taking into account the wake and blockage effects of the other WT. Based on these wind speeds the CT and deficits are recalculated.\n",
-    "- **Iteration 3:** Repeat after which the flow field has converged."
+    "- **Iteration 3:** Repeat until the flow field has converged."
    ]
   },
   {
